# enginegl

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
common/: const.h  in_buttons.h
dlls/: CMakeLists.txt  basemonster.h  bmodels.cpp  buttons.cpp  cbase.cpp  cbase.h  client.cpp  doors.cpp  doors.h  enginecallback.h  extdll.h  func_break.cpp  func_break.h  globals.cpp  h_cine.cpp  h_cycler.cpp  h_dispatch.cpp  h_export.cpp  hl.def  items.cpp  items.h  john_train.cpp  lights.cpp  m44.cpp  monsters.cpp  plats.cpp  player.cpp  player.h  sound.cpp  subs.cpp  triggers.cpp  util.cpp  util.h  vector.h  weapons.cpp  weapons.h  world.cpp
engine/: CMakeLists.txt  bspfile.h  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  common.c  common.h  console.c  decals.c  decals.h  draw.h  eiface.h  engine.cmake  gl_draw.c  gl_model.c  gl_model.h  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_vidnt.c  gl_warp.c  glquake.h  host.c  host_cmd.c  in_camera.c  in_camera.h  in_win.c  keys.c  l_studio.c  mathlib.h  menu.c  model.h  net_main.c  pr_cmds.c  pr_cmds.h  pr_edict.c  (+39 more)
engine/gas2masm/: CMakeLists.txt  gas2masm.c
public/: edict.h  extdll.h  port.h  qfont.h  qlimits.h  rendermode.h
utils/common/: cmdlib.c  cmdlib.h
utils/qlumpy/: CMakeLists.txt  qlumpy.c  quakegrb.c
